stop breadcrumb anim on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -81,17 +81,17 @@ h1 {
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
   }
 }
 
 .header-current {
   padding: 1rem;
   z-index: 999;
-
-  animation: 0.6s ease-out 0s 1 slideInFromLeft;
 }
 
 .mobile-nav-toggle {
@@ -192,6 +192,10 @@ a.active .hBttn {
 
   #welcome-img {
     margin: 2rem 2rem;
+  }
+
+  .header-current {
+    animation: 0.6s ease-out 0s 1 slideInFromLeft;
   }
 }
 
